# datasentinel-ai

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
data/: stats.json  webhooks.json
data/rules/: default_rules.json
docs/: DEVLOG.md  ROADMAP.md
pages/: 1_Analyse.py  2_Batch.py  3_Jobs.py  4_Stats.py  5_Regles.py  6_Agents.py  7_Feedback.py  8_Historique.py  _helpers.py
scripts/: demo.py  init_chroma.py
src/: __init__.py
src/agents/: __init__.py  base.py  corrector.py  orchestrator.py  profiler.py  quality.py  semantic_profiler.py  validator.py
src/api/: __init__.py  auth.py  limiter.py  main.py
src/api/routes/: __init__.py  analyze.py  auth.py  batch.py  datasets.py  domain_agents.py  explain.py  feedback.py  jobs.py  recommend.py  rules.py  stats.py  upload.py  webhooks.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/core/: __init__.py  config.py  dataset_memory.py  domain_manager.py  exceptions.py  feedback_processor.py  job_manager.py  models.py  stats_manager.py  webhook_manager.py
src/memory/: __init__.py  chroma_store.py  decision_log.py  feedback_store.py  session_store.py
src/ml/: __init__.py  anomaly_detector.py  confidence_scorer.py  drift_detector.py
src/tools/: __init__.py  anomaly.py  drift.py  rules.py  statistical.py
src/utils/: data_loader.py  logging.py
test_data/chroma/: chroma.sqlite3
tests/: __init__.py  conftest.py
tests/integration/: test_apply_corrections.py  test_batch.py  test_comparison.py  test_corrections.py  test_jobs.py  test_pipeline.py  test_reports.py  test_rules.py  test_stats.py  test_upload.py  test_webhooks.py
tests/unit/: test_adaptive_orchestrator.py  test_anomaly_detector.py  test_auth.py  test_chroma_store.py  test_dataset_memory.py  test_drift_detector.py  test_feedback_processor.py  test_orchestrator.py  test_parallel_quality.py  test_quality_agent.py  test_quality_v4.py  test_semantic_profiler.py  test_session_store.py  test_webhook_manager.py
